--- a/style.css
+++ b/style.css
@@ -1,2 +1,131 @@
+/* Note: I am doing this website MOBILE first as par rekkomendation of w3 School */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap');
+
 * {
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+  font-size: 14px;
+}
+
+a {
+  text-decoration: none;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.highlighted-btn {
+  background: #52ab98;
+  color: white;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.d-none {
+  display: none;
+}
+
+.home {
+  width: 100%;
+  background: white;
+}
+
+.header {
+  background: #c8d8e4;
+  padding: 16px 0;
+}
+
+.header > div {
+  display: flex;
+  flex-direction: column;
+}
+
+.header > div > div {
+  display: flex;
+  flex-direction: row;
+
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  color: #2b6777;
+  font-size: 32px;
+  font-weight: bold;
+}
+
+.menu {
+  color: #2b6777;
+  font-size: 32px;
+  display: block;
+  cursor: pointer;
+}
+
+nav {
+  display: flex;
+  flex-direction: column;
+}
+
+nav a {
+  color: #2b6777;
+  background: white;
+  padding: 8px 16px;
+  border-radius: 5px;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-weight: bold;
+  margin-top: 15px;
+}
+
+nav a:hover {
+  background: #2b6777;
+  color: white;
+}
+
+#more {
+  display: none;
+}
+
+.intro-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+
+.intro {
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+.intro-image {
+  grid-area: 2 / 1 / 3 / 2;
+  padding: 6px;
+  text-align: center;
+}
+
+.intro h1 {
+  font-size: 48px;
+  text-transform: uppercase;
+  color: #2b6777;
+  margin: 32px 0 0 0;
+}
+
+.intro h2 {
+  font-size: 25px;
+  color: #8684a1;
+}
+.intro h3 {
+  color: #8684a1;
+  margin: 0 0 26px 0;
+}
+
+.intro p {
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
