--- a/style.css
+++ b/style.css
@@ -22,6 +22,14 @@ html {
   color: white;
 }
 
+.page-heading {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 36px;
+  position: relative;
+  margin-bottom: 46px;
+}
+
 .d-flex {
   display: flex;
 }
@@ -128,4 +136,125 @@ nav a:hover {
 .intro p {
   margin-top: 20px;
   margin-bottom: 10px;
+}
+
+/* ...........SERVICE Section Starts Here..................... */
+
+.services-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.service {
+  text-align: center;
+  padding: 32px;
+  background-color: #f2f2f2;
+  margin-right: 16px;
+  margin-bottom: 30px;
+  width: calc(100%-64px);
+  transition: all 0.3s ease;
+}
+
+.service-sec-img {
+  width: 150px;
+}
+
+.service:hover {
+  background-color: #c8d8e4;
+  box-shadow: 5px 5px 10px #2b6777;
+}
+
+/* ...................Upcoming Projects Section...................................... */
+.upcoming-page-heading {
+  margin-top: 50px;
+}
+
+.containerX {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  min-height: 50vh;
+  background: #c8d8e4;
+  max-width: 1400px;
+  margin: auto;
+  padding: 0px 8px;
+}
+
+.containerX .boxA {
+  position: relative;
+  width: 250px;
+  height: 250px;
+  background: red;
+  margin: 10px;
+  overflow: hidden;
+}
+.containerX .boxA .img-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #f2f2f2;
+}
+.containerX .boxA .img-box.active {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+}
+.containerX .boxA .img-box img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.containerX .boxA .img-box.active img {
+  position: absolute;
+  top: 50px;
+  left: 50px;
+  right: 50px;
+  bottom: 50px;
+  width: calc(100% - 100px);
+  height: calc(100% - 100px);
+}
+.containerX .boxA .img-box h2 {
+  opacity: 0;
+  visibility: hidden;
+  cursor: pointer;
+}
+.containerX .boxA .img-box.active h2 {
+  opacity: 1;
+  visibility: visible;
+  text-align: center;
+  color: red;
+  font-size: 28px;
+  font-weight: 800;
+  margin-top: 15px;
+  letter-spacing: 4px;
+}
+.containerX .boxA .img-box .content {
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+  left: 50px;
+  opacity: 0;
+  visibility: hidden;
+  background: #52ab98;
+  padding: 40px;
+  color: #000000;
+
+  transform: translateY(100%);
+}
+.containerX .boxA .img-box.active .content {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+  transition: 0.5s;
 }
