--- a/media.css
+++ b/media.css
@@ -6,12 +6,32 @@
 /* --------------------------------------------- */
 
 @media only screen and (max-width: 600px) {
+  .service {
+    text-align: center;
+    padding: 25px;
+    background-color: #f2f2f2;
+    margin-right: 16px;
+    margin-bottom: 16px;
+    width: calc(100%-64px);
+    transition: all 0.3s ease;
+    margin: 9px 14px;
+    width: 100%;
+  }
+  .intro-image {
+    margin-top: 10px;
+  }
 }
 /* ------------------------------------------------------------- */
 /* B. Small devices (portrait tablets and large phones, 600px and up) */
 /* ------------------------------------------------------------- */
 
 @media only screen and (min-width: 600px) {
+  .intro-image {
+    width: 400px;
+  }
+  .service-sec-img {
+    width: 100px;
+  }
 }
 
 /* ---------------------------------------------------- */
@@ -26,6 +46,91 @@
 /* -------------------------------------------- */
 
 @media only screen and (min-width: 992px) {
+  .intro-image {
+    width: 500px;
+  }
+
+  .container {
+    /* max-width: 768; */
+    margin: 0 auto;
+  }
+
+  /* Home Page Starts Here */
+
+  .header > div {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .header > div > div {
+    display: flex;
+    flex-direction: row;
+
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .logo {
+    margin-bottom: 0;
+  }
+
+  .menu {
+    display: none;
+  }
+
+  nav {
+    flex-direction: row;
+    display: flex !important;
+  }
+
+  nav a {
+    margin-top: 0;
+    margin-left: 8px;
+  }
+
+  .intro-grid {
+    display: grid;
+    grid-template-columns: repeat(0, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    align-items: center;
+  }
+
+  .intro {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+
+  .intro-image {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+
+  /* SERVICES Section Starts Here */
+
+  .services-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .service {
+    padding: 9px;
+    margin-right: 6px;
+    margin-bottom: 6px;
+    width: 32%;
+    transition: all 0.3s ease;
+  }
+
+  .service:hover {
+    background-color: #c8d8e4;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
+  }
+
+  .service img {
+    width: 100%;
+  }
 }
 
 /* -------------------------------------------------------------- */
