--- a/style.css
+++ b/style.css
@@ -1,13 +1,27 @@
-/* Note: I am doing this website MOBILE first as par rekkomendation of w3 School */
+/* Note: I am doing this website MOBILE first as par rekomendation of w3 School */
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap');
 
 * {
   margin: 0;
-
+  /* max-width: 1400px; */
   padding: 0;
   font-family: 'Poppins', sans-serif;
   font-size: 14px;
+}
+
+/* =================== New css start here================= */
+.box {
+  max-width: 1400px;
+  margin: auto;
+  padding: 0px 8px;
+}
+
+.container {
+  padding: 0 16px;
+}
+img {
+  max-width: 100%;
 }
 
 a {
@@ -18,9 +32,21 @@ html {
   scroll-behavior: smooth;
 }
 
+.btn {
+  padding: 9px 18px;
+  border-radius: 4px;
+  font-weight: bold;
+  cursor: pointer;
+  display: inline-block;
+}
+
 .highlighted-btn {
   background: #52ab98;
   color: white;
+}
+
+.section {
+  padding: 90px 0;
 }
 
 .page-heading {
@@ -139,7 +165,7 @@ nav a:hover {
   margin-bottom: 10px;
 }
 
-/* ...........SERVICE Section Starts Here..................... */
+/* ...........SERVICE Section Starts Here */
 
 .services-container {
   display: flex;
@@ -166,7 +192,7 @@ nav a:hover {
   box-shadow: 5px 5px 10px #2b6777;
 }
 
-/* ...................Upcoming Projects Section...................................... */
+/* .............Upcoming Projects Section */
 .upcoming-page-heading {
   margin-top: 50px;
 }
@@ -260,7 +286,7 @@ nav a:hover {
   transition: 0.5s;
 }
 
-/* ....................FOOTER SECTION ..............................*/
+/* ................FOOTER SECTION.*/
 
 #footer {
   background-color: black;
