--- a/style.css
+++ b/style.css
@@ -165,6 +165,38 @@ nav a:hover {
   margin-bottom: 10px;
 }
 
+/* ??????????????????????????????????? */
+
+/* Type Section */
+.containerF {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 1400px;
+  margin: 0 auto;
+  background-color: #f2f2f2;
+}
+
+.feature {
+  border-radius: 10px;
+  box-shadow: 3px 3px 11px rgba(0, 0, 0, 0.3);
+  margin: 30px 1.66%;
+  padding: 10px;
+  width: 84.33%;
+  text-align: center;
+}
+
+.feature h2 {
+  font-size: 20px;
+  text-align: center;
+  margin-top: 5px;
+}
+
+.feature p {
+  font-size: 12px;
+  line-height: 25px;
+}
+
 /* ...........SERVICE Section Starts Here */
 
 .services-container {
