--- a/media.css
+++ b/media.css
@@ -6,6 +6,10 @@
 /* --------------------------------------------- */
 
 @media only screen and (max-width: 600px) {
+  .box {
+    margin-bottom: 0;
+  }
+
   .service {
     text-align: center;
     padding: 25px;
@@ -16,11 +20,12 @@
     transition: all 0.3s ease;
     margin: 9px 14px;
     /* ?? */
-    width: 84%;
+    /* width: 84%; */
   }
-  .intro-image {
+
+  /* .intro-image {
     margin-top: 10px;
-  }
+  } */
 }
 /* ------------------------------------------------------------- */
 /* B. Small devices (portrait tablets and large phones, 600px and up) */
@@ -42,17 +47,17 @@
 @media only screen and (min-width: 768px) {
   .intro h1 {
     font-size: 40px;
-    text-transform: uppercase;
-    color: #2b6777;
-    margin: 32px 0 0 0;
+    /* text-transform: uppercase; */
+    /* color: #2b6777; */
+    /* margin: 32px 0 0 0; */
   }
 
   .intro h2 {
     font-size: 30px;
-    color: #8684a1;
+    /* color: #8684a1; */
   }
 
-  /* Type Section */
+  /* Portfolio Section */
 
   .feature {
     width: 40%;
@@ -60,7 +65,9 @@
 }
 
 /* -------------------------------------------- */
+/* -------------------------------------------- */
 /* D. Large devices (laptops/desktops, 992px and up) */
+/* -------------------------------------------- */
 /* -------------------------------------------- */
 
 @media only screen and (min-width: 992px) {
@@ -122,6 +129,9 @@
 
   .intro-image {
     grid-area: 1 / 2 / 2 / 3;
+    padding: 16px;
+    text-align: center;
+    margin-top: 60px;
   }
 
   /* SERVICES Section Starts Here */
@@ -168,7 +178,7 @@
     color: #8684a1;
   }
 
-  /* Type */
+  /* Portfolio */
   .feature {
     width: 19.99%;
   }
