--- a/style.css
+++ b/style.css
@@ -45,6 +45,11 @@ html {
   color: white;
 }
 
+.btn-intro {
+  margin-top: 10px;
+  border-radius: 6px;
+}
+
 .section {
   padding: 90px 0;
 }
@@ -142,6 +147,7 @@ nav a:hover {
   grid-area: 2 / 1 / 3 / 2;
   padding: 6px;
   text-align: center;
+  /* margin-top: 30px; */
 }
 
 .intro h1 {
@@ -165,9 +171,14 @@ nav a:hover {
   margin-bottom: 10px;
 }
 
+.skills {
+  color: #2b6777;
+  margin-left: 15px;
+}
+
 /* ??????????????????????????????????? */
 
-/* Type Section */
+/* Portfolio Section */
 .containerF {
   display: flex;
   flex-wrap: wrap;
@@ -197,7 +208,7 @@ nav a:hover {
   line-height: 25px;
 }
 
-/* ...........SERVICE Section Starts Here */
+/* ............................SERVICE Section Starts Here */
 
 .services-container {
   display: flex;
@@ -224,7 +235,7 @@ nav a:hover {
   box-shadow: 5px 5px 10px #2b6777;
 }
 
-/* .............Upcoming Projects Section */
+/* ..............................Upcoming Projects Section */
 .upcoming-page-heading {
   margin-top: 50px;
 }
@@ -235,8 +246,8 @@ nav a:hover {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  min-height: 50vh;
-  background: #c8d8e4;
+  min-height: 35vh;
+  background: #f2f2f2;
   max-width: 1400px;
   margin: auto;
   padding: 0px 8px;
