--- a/media.css
+++ b/media.css
@@ -62,6 +62,10 @@
   .feature {
     width: 40%;
   }
+
+  .skills > div > i {
+    padding-right: 30px;
+  }
 }
 
 /* -------------------------------------------- */
