--- a/style.css
+++ b/style.css
@@ -215,7 +215,9 @@ nav a:hover {
 
 .service {
   text-align: center;
-  padding: 32px;
+
+  padding: 45px;
+
   background-color: #f2f2f2;
   margin-right: 16px;
   margin-bottom: 30px;
@@ -344,7 +346,7 @@ nav a:hover {
   justify-content: center;
 }
 
-.footer-icon p {
+.footer-icon a {
   margin: 10px;
   color: white;
 }
