--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
   font-size: 14px;
 }
 
-/* =================== New css start here================= */
 .box {
   max-width: 1400px;
   margin: auto;
@@ -146,7 +145,6 @@ nav a:hover {
   grid-area: 2 / 1 / 3 / 2;
   padding: 6px;
   text-align: center;
-  /* margin-top: 30px; */
 }
 
 .intro h1 {
@@ -173,6 +171,27 @@ nav a:hover {
 .skills {
   color: #2b6777;
   margin-left: 15px;
+}
+
+#goTopBtn {
+  display: none;
+  position: fixed;
+  bottom: 15px;
+  right: 25px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: #52ab98;
+  color: white;
+  font: bold;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 30px;
+  font-size: 15px;
+}
+
+#goTopBtn:hover {
+  background-color: #2b6777; /* Add a dark-grey background on hover */
 }
 
 /* Portfolio Section */
@@ -341,10 +360,6 @@ nav a:hover {
   margin-top: 3px;
   text-align: center;
 }
-
-/* .footer-section {
-  text-align: center;
-} */
 
 .footer-icon {
   display: flex;
