--- a/style.css
+++ b/style.css
@@ -195,7 +195,33 @@ nav a:hover {
   background-color: #2b6777;
 }
 
-/* Portfolio Section */
+/* ............................SERVICE Section Starts Here */
+
+.services-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.service {
+  text-align: center;
+  padding: 45px;
+  background-color: #f2f2f2;
+  margin-bottom: 30px;
+  width: calc(100%-64px);
+  transition: all 0.3s ease;
+}
+
+.service-sec-img {
+  width: 150px;
+}
+
+.service:hover {
+  background-color: #c8d8e4;
+  box-shadow: 5px 5px 10px #2b6777;
+}
+
+/*........................ Portfolio Section............. */
 .containerF {
   display: flex;
   flex-wrap: wrap;
@@ -228,35 +254,6 @@ nav a:hover {
 .feature p {
   font-size: 12px;
   line-height: 25px;
-}
-
-/* ............................SERVICE Section Starts Here */
-
-.services-container {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-}
-
-.service {
-  text-align: center;
-
-  padding: 45px;
-
-  background-color: #f2f2f2;
-  margin-right: 16px;
-  margin-bottom: 30px;
-  width: calc(100%-64px);
-  transition: all 0.3s ease;
-}
-
-.service-sec-img {
-  width: 150px;
-}
-
-.service:hover {
-  background-color: #c8d8e4;
-  box-shadow: 5px 5px 10px #2b6777;
 }
 
 /* ..............................Upcoming Projects Section */
@@ -292,6 +289,7 @@ nav a:hover {
   width: 100%;
   height: 100%;
   background: #f2f2f2;
+  cursor: pointer;
 }
 .containerX .boxA .img-box.active {
   position: fixed;
@@ -351,6 +349,10 @@ nav a:hover {
   visibility: visible;
   transform: translateY(0);
   transition: 0.5s;
+}
+
+.img-box:hover {
+  box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.8);
 }
 
 /* ................FOOTER SECTION.......................*/
